# ddog-hackathon-octopus

./: ai-incident-commander.md
incident-commander/: README.md  sample-use-case.md
incident-commander/apps/: .env.example  Dockerfile  STRUCTURE.md  docker-compose.platform.yml  docker-compose.services.yml  guideline.md  pyproject.toml
incident-commander/apps/incident-commander-apps/: .env.example  Dockerfile  docker-compose.yml  guideline.md  pyproject.toml
incident-commander/apps/incident-commander-apps/src/: main.py
incident-commander/apps/incident-commander-apps/src/agents/: application.py  graph.py  incident_lead.py  infrastructure.py  prompts.py  service.py  state.py
incident-commander/apps/incident-commander-apps/src/core/: config.py  llm.py
incident-commander/apps/incident-commander-apps/src/db/: repository.py
incident-commander/apps/incident-commander-apps/src/integrations/: datadog_workflow.py  slack.py
incident-commander/apps/incident-commander-apps/src/mcp/: client.py  tools.py
incident-commander/apps/incident-commander-apps/src/rca/: generator.py
incident-commander/apps/ms-inventory/: go.mod  main.go
incident-commander/docs/: 00-overview.md  01-architecture.md  02-agent-design.md  03-workflow.md  04-observability.md  05-data-model.md  05-mcp-tools.md  06-slack-war-room.md  07-dashboard-strategy.md  07-executive-dashboard.md  08-outage-usecase.md  09-billing-anomaly-usecase.md  09-cost-anomaly-usecase.md  10-demo-flow.md  10-mvp-roadmap.md  11-datadog-capabilities.md  11-datadog-capability-matrix.md  12-auto-rca.md
(+59 files in other folders)
