[project]
name = "incident-commander"
version = "0.1.0"
description = "AI Incident Commander"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain-aws",
    "boto3",
    "slack_bolt",
    "psycopg2-binary",
    "pgvector",
    "sqlalchemy",
    "datadog-api-client",
    "opentelemetry-distro",
    "opentelemetry-instrumentation-fastapi",
    "ddtrace",
    "python-dotenv",
    "pydantic-settings"
]
